# english-in-use

./: .gitignore  .lintstagedrc  .prettierignore  README.md  components.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.vue  i18n.ts  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/0.1.0/: _app_meta.sql  books.sql  up.sql
src-tauri/migrations/0.1.0/down/: down.sql
src-tauri/migrations/0.1.0/up/: _app_meta.sql  books.sql  reading_progress.sql
src-tauri/src/: commands.rs  config.rs  db.rs  lib.rs  main.rs  migrations.rs  r2.rs  status.rs
src-tauri/src/commands/: books.rs  config.rs  db.rs  mod.rs  r2.rs  system.rs
src-tauri/src/database/: d1.rs  migrations.rs  mod.rs  sqlite.rs
src-tauri/src/models/: book.rs  book_group.rs  book_metadata.rs  config.rs  mod.rs  reading_progress.rs  status.rs
src-tauri/src/services/: book_metadata.rs  config.rs  db_init.rs  mod.rs  status.rs
src-tauri/src/utils/: cache.rs  local.rs  mod.rs  r2.rs
src/__tests__/: AppFlow.spec.ts  i18n.spec.ts
src/components/: AppFooter.vue  AppHeader.vue  BookList.vue  ConfigPage.vue  ReaderView.vue
src/components/__tests__/: AppFooter.spec.ts  AppHeader.spec.ts  BookList.spec.ts  ConfigPage.spec.ts  ReaderView.spec.ts
src/components/config/: BookSourceSettings.vue  DatabaseSettings.vue  SystemSettings.vue
src/composables/: useReaderAudio.ts  useReaderMetadata.ts  useReaderTOC.ts  useTheme.ts
src/locales/: en.json  zh.json
src/stores/: app.ts  reader.ts
(+20 files in other folders)
