[package]
name = "EnglishInUse"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "english_in_use_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.11"
tauri-plugin-dialog = "2.6.0"
aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
anyhow = "1.0.101"
dirs = "5.0"
semver = "1.0"
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
tempfile = "3.24.0"
mockito = "1.4.0"

